# Solution_Configurator

Frontend/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
Frontend/public/: index.html
Frontend/src/: App.jsx  index.css  index.js
Frontend/src/components/: Callback.jsx  CarbonHeader.jsx  Login.jsx  LoginPage.jsx  OfferingDetail.jsx  OfferingDetail.scss  OfferingsCatalog.jsx  ProtectedRoute.jsx  SolutionBuilder.jsx  UserProfile.jsx
Frontend/src/components/AdminComponents/: ActivityForm.jsx  ActivityList.jsx  AdminLayout.jsx  AdminLayout.scss  BrandForm.jsx  BrandList.jsx  CountryForm.jsx  CountryList.jsx  OfferingForm.jsx  OfferingList.jsx  PricingForm.jsx  PricingList.jsx  ProductForm.jsx  ProductList.jsx  StaffingForm.jsx  StaffingList.jsx  WBSForm.jsx  WBSList.jsx  WBSStaffingManager.jsx
Frontend/src/contexts/: AuthContexts.jsx
Frontend/src/hooks/: index.js  useBrandsAndProducts.js  useOfferingDetail.js  useOfferings.js  usePermissions.js
Frontend/src/services/: activityService.js  adminService.js  api.js  authService.js  countryService.js  index.js  offeringService.js  pricingService.js  productService.js  staffingService.js  wbsService.js  wbsStaffingService.js
deploy/post-production/: test.py
deploy/pre-production/: application.yaml  pyproject.toml
solution-configurator-backend/: requirements.txt
solution-configurator-backend/alembic/: env.py
solution-configurator-backend/alembic/versions/: ac7f007f2828_initial_migration.py  e0d81c60fb62_initial_migrations.py
solution-configurator-backend/app/: config.py  database.py  main.py
solution-configurator-backend/app/api/v1/: api.py
solution-configurator-backend/app/api/v1/endpoints/: admin_stats.py  auth.py  pricing.py  staffing.py  wbs_staffing.py
solution-configurator-backend/app/auth/: permissions.py
solution-configurator-backend/app/crud/: activity.py  pricing.py  staffing.py  wbs_staffing.py
solution-configurator-backend/app/models/: __init__.py  activity.py  brand.py  offering.py  pricing.py  product.py  staffing.py  wbs.py  wbs_staffing.py
solution-configurator-backend/app/schemas/: __init__.py  activity.py  offering.py  pricing.py  staffing.py  wbs.py
solution-configurator-backend/deploy/post-production/: application.yaml  pyproject.toml
solution-configurator-backend/deploy/pre-production/: test.py
solution-configurator-backend/deploy/test/: application.yaml  pyproject.toml  test.py
